# cascade

./: .gitignore  AGENTS.md  COMPLETION_SUMMARY.md  DEVELOPMENT.md  README.md  design.md  install.sh  pyproject.toml  setup.py
cascade/: __init__.py  app.py  auth.py  auth_flow.py  auth_store.py  cascade.tcss  cli.py  commands.py  config.py  repl.py  repl_prompt.py  setup_flow.py  state.py  theme.py
cascade/agents/: __init__.py  builtins.py  init.py  loader.py  runner.py  schema.py  templates.py  workflow.py
cascade/context/: __init__.py  memory.py  project.py
cascade/history/: __init__.py  database.py
cascade/hooks/: __init__.py  loader.py  runner.py
cascade/integrations/: __init__.py  shannon.py
cascade/plugins/: __init__.py  base.py  file_ops.py  registry.py
cascade/prompts/: __init__.py  (+2 more)
examples/: EXAMPLES.md  config.example.yaml  example_code.py
tests/: __init__.py  test_agent_runner.py  test_agents.py  test_auth.py  test_auth_flow.py  test_banner.py  test_builtins.py  test_code_block.py  test_config.py  test_context.py  test_ghost_table.py  test_gutter.py  test_history.py  test_hooks.py  test_init.py  test_input_container.py  test_main_screen.py  test_markdown_render.py  test_memory.py  test_mode.py  test_odometer.py  test_openai.py  test_openrouter.py  test_plugins.py  test_plugins_v2.py  test_prompts.py  test_providers.py  test_registry.py  test_repl.py  test_response_meta.py  test_setup.py  test_shannon.py  test_statusbar.py  test_stream.py  test_theme.py  test_tool_calling.py  test_tools.py  test_upload_cmd.py  test_web.py  test_workflow.py
(+46 files in other folders)
